--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
 	text-align: center;
 	
 	}
+
+#header-content {
+	
+	width: 75%;		
+}
 	
 	
 /* Search section */	
@@ -21,9 +26,14 @@
 	text-align: center;
 	vertical-align: middle;
 	
-	
-	
 	}
+
+#search-content {
+	
+	width: 75%;
+	text-align: center;
+}
+
 	
 #search input.text {
 	
@@ -61,6 +71,11 @@
 	   float: right;
 	
 	}
+
+#results-content {
+	
+	width: 75%;
+}
 	
 /* Footer Section */	
 	
