--- a/style.css
+++ b/style.css
@@ -9,11 +9,6 @@
 	text-align: center;
 	
 	}
-
-#header-content {
-	
-	width: 75%;		
-}
 	
 	
 /* Search section */	
@@ -26,20 +21,14 @@
 	text-align: center;
 	vertical-align: middle;
 	
+	
 	}
 
-#search-content {
-	
-	width: 75%;
-	text-align: center;
-}
 
-	
 #search input.text {
 	
-	
-	width: 50%;
-	height: 45px;
+	width: 60%;
+	height: 68px;
 	color: #0092d8;
 	padding-left: 10px;
 	/* round corners */
@@ -50,12 +39,19 @@
 	font-size: 18px;
 		
 	}
+#search-content {
+	
+	width: 80%;
+	margin: auto;
+	vertical-align: middle;
+	
+}
 	
 /* Results Section */
 	
 #results {
 	
-	background-color: #edebda;
+	background-color: #c0c0c0;
 	
 	}
 	
@@ -74,9 +70,11 @@
 
 #results-content {
 	
-	width: 75%;
-}
+	width: 80%;
+	margin: auto;
 	
+}
+
 /* Footer Section */	
 	
 
