--- a/books.css
+++ b/books.css
@@ -102,6 +102,19 @@ body {
 	}
 
 
+
+.selectBox{
+  width:140px;
+  height:40px;
+  border: 1px solid #0092d8;
+  outline:none;
+  font-family: 'Lora', serif;
+  font-size: 16px;
+  color: #0092d8;
+	
+}
+
+
 #results-content h1 {
 	float: left;
 	font-family: 'Lora', serif;
