--- a/books.css
+++ b/books.css
@@ -47,7 +47,7 @@ body {
 #search input.text {
 	
 	width: 60%;
-	height: 68px;
+	height: 60px;
 	color: #0092d8;
 	padding-left: 10px;
 	/* round corners */
@@ -140,9 +140,6 @@ body {
 	position: relative;
 	float: left;
 	margin: 15px;
-
-
-	
 	
 }
 
@@ -158,7 +155,6 @@ body {
 	text-align: right;
 	color: #fff;
 	
-	
 }
 
 #overlay p {
@@ -167,18 +163,38 @@ body {
 	font-family: 'Lora', serif;
 	font-size: 18px;
 	
-	
 }
 
-
-
-
-
-
-
-
-/*working on that overlay */
-
+#video-tag-year {
+  background-color: black;
+  height: 10%;
+  width: 20%;
+  font-family: 'Lora', serif;
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+  /* This is not ideal, but so far the only way i can figure out how to get the boxes here */
+  position: absolute;
+  top: 187px;
+  left: 160px;
+ 
+ 
+}
+#video-tag-category {
+  
+  background-color: black;
+  height: 10%;
+  width: 22%;
+  font-family: 'Lora', serif;
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 187px;
+  left: 95px;
+ 
+}
+/*working on that overlay, but couldn't get this to work */
+/*
 .hilight {
     background-color: #000;
     position: absolute;
@@ -189,7 +205,7 @@ body {
     color: #FFF;
     bottom: 0px;
     z-index: 1;
-}
+} */
 
 #footer {
 	float: left;
